# bin-encode-decode

./: Cargo.toml  README.md  readme.md
.github/workflows/: rust.yml
sh/: init.sh
src/: lib.rs
src/common/: cfg.rs  const.rs  enum.rs  error.rs  impl.rs  mod.rs  struct.rs  trait.rs  type.rs
src/common/error/: enum.rs  impl.rs  mod.rs
src/crypt/: mod.rs
src/crypt_decrypt/: cfg.rs  error.rs  impl.rs  mod.rs  static.rs  type.rs
src/decode/: cfg.rs  func.rs  impl.rs  mod.rs  struct.rs  test.rs
src/decrypt/: cfg.rs  decrypt.rs  mod.rs
src/encode/: cfg.rs  func.rs  impl.rs  mod.rs  struct.rs  test.rs
src/encrypt/: cfg.rs  encrypt.rs  mod.rs
tests/: mod.rs
tests/common/: fn.rs
tests/decode/: fn.rs
tests/encode/: fn.rs
