[package]
name = "bin-encrypt-decrypt"
version = "2.2.9"
edition = "2021"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = "A high-performance binary encryption and decryption library that supports customizable character sets beyond Base64."
keywords = ["binaryencryption", "decryption", "customcharset", "highperformance", "base64alternative"]
repository = "https://github.com/ltpp-universe/bin-crypt-decrypt"
categories = ["cryptography", "encoding"]

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
backtrace = "off"