[package]
name = "bin-encode-decode"
version = "0.0.3"
edition = "2021"
authors = ["ltpp-universe <root@ltpp.vip>"] 
license = "MIT"
description = "A high-performance binary encode and decode library that supports customizable character sets beyond Base64."
keywords = ["binaryencode", "decode", "customcharset", "highperformance", "base64alternative"]
repository = "https://github.com/ltpp-universe/bin-crypt-decode"
categories = ["encoding"]

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"