[package]
name = "bin-encode-decode"
version = "1.1.8"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = "A high-performance binary encode and decode library that supports customizable character sets beyond Base64."
keywords = ["binaryencode", "decode", "customcharset", "highperformance", "base64alternative"]
repository = "https://github.com/eastspire/bin-encode-decode"
categories = ["encoding"]

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
